--- a/java/build.gradle
+++ b/java/build.gradle
@@ -11,6 +11,12 @@ java {
     sourceCompatibility = '11'
 }
 
+tasks.jar {
+    manifest {
+        attributes["Main-Class"] = "com.fyhao.springbootapps.finance.FinanceApplication"
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -28,7 +34,7 @@ dependencies {
     // Spring Boot Starter for testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     
-    testImplementation 'com.h2database:h2'
+    implementation 'com.h2database:h2'
     
     implementation 'org.projectlombok:lombok:1.18.22'
 
