--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-
-spring.datasource.url=jdbc:mysql://<YOUR_DATABASE_HOST>:3306/<YOUR_DATABASE_NAME>
-spring.datasource.username=<YOUR_DATABASE_USERNAME>
-spring.datasource.password=<YOUR_DATABASE_PASSWORD>
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
